[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/HUD/TapZone.png" type="Texture" id=1]
[ext_resource path="res://Images/HUD/Note.bmp" type="Texture" id=2]
[ext_resource path="res://Scenes/NoteManager.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "MoveNote"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 294.087, -38.3704 ), Vector2( 294.087, 1335.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 294.087, -174.732 ), Vector2( 294.087, 1200 ), Vector2( 294.087, 1328.51 ) ]
}

[node name="NoteManager" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MissNoteButton" type="Button" parent="."]
margin_left = 475.329
margin_top = 51.548
margin_right = 628.329
margin_bottom = 112.548
text = "Miss A Note"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
autoplay = "MoveNote"
anims/MoveNote = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 294.087, 1335.4 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 294.087, 1328.51 )
texture = ExtResource( 2 )

[node name="TapButton" type="TextureButton" parent="."]
margin_left = 270.087
margin_top = 1146.54
margin_right = 318.087
margin_bottom = 1194.54
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MissNoteButton" to="." method="_on_MissNoteButton_pressed"]
[connection signal="button_up" from="TapButton" to="." method="_on_TextureButton_button_up"]
